# server/src/main/kotlin/features/post/dto/CreatePostResponse.kt
@@ -1,0 +1,10 @@
+package com.revio.server.features.post.dto
+
+import com.revio.server.features.user.dto.SelfUserDTO
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class CreatePostResponse(
+    val postId: String,
+    val user: SelfUserDTO? = null,
+)
